--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -8,16 +8,16 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #00000;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #cbb7f5;
-  --ion-color-primary-tint: #cbb7f5;
+  --ion-color-primary-shade: #000000;
+  --ion-color-primary-tint: #000000;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #000000;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-shade: #000000;
+  --ion-color-secondary-tint: #000000;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
